Properly bundled everthing lol

--- a/debug.html
+++ b/debug.html
@@ -1,5 +1,5 @@
 <html>
 	<head>
-		<script src="./bigfloat.js"></script>
+		<script src="./dist/bundled/monsterfloat.js"></script>
 	</head>
 </html>
